Make sure images don't overflow in update modal

--- a/appsrc/style/global-styles/_modals.scss
+++ b/appsrc/style/global-styles/_modals.scss
@@ -91,6 +91,10 @@
           cursor: pointer;
         }
       }
+
+      p img {
+        max-width: 100%;
+      }
     }
 
     .message .secondary {
